--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/i18n",
-  "version": "0.1.12",
+  "version": "0.2.0-sk-next-beta.0",
   "license": "MIT",
   "description": "Generic i18n-related utilities",
   "main": "index.js",
