--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/i18n",
-  "version": "0.2.5",
+  "version": "0.2.5-graphql-config-beta.1",
   "license": "MIT",
   "description": "Generic i18n-related utilities",
   "main": "index.js",
