--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/i18n",
-  "version": "1.0.7",
+  "version": "1.0.7-export-beta.0",
   "license": "MIT",
   "description": "Generic i18n-related utilities",
   "main": "index.js",
